add mute icon first

--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
       </div>
     </div>
     <button id="playPauseBtn" onclick="toggleAudio()">
-      <i id="volumeIcon" class="fas fa-volume-up"></i>
+      <i id="volumeIcon" class="fas fa-volume-mute"></i>
     </button>
     <div class="event">
       <h2 class="playwrite-it-moderna-400 " style="font-size: 3em;">Event</h2>
